# arwiktextract

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
arwiktextract/: __init__.py  __main__.py  data.py  entry.py  normalizer.py  shell.py
tests/: test_data.py  test_entry.py  test_normalizer.py  test_packages.py
tests/data/: entry.json  wiktionary-arabic.json
