[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "arwiktextract"
version = "0.0.1"
authors = [
  {name="Tijmen Baarda", email="t.c.baarda@uu.nl"}
]
dependencies = [
  "appdirs",
  "cmd2",
]
description = "Dictionary lookup from Wiktionary for inflected Arabic words"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  'Development Status :: 2 - Pre-Alpha',
  'Environment :: Console',
  'Intended Audience :: Science/Research',
  'License :: OSI Approved :: BSD License',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3'
]

[project.optional-dependencies]
dev = [
  'pytest',
  'ruff',
  'black',
]

[project.scripts]
arwikt = "arwiktextract.__main__:main"

[tool.pytest.ini_options]
pythonpath = [
  "arwiktextract"
]

[tool.setuptools.packages.find]
where = ["."]
