[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "arwiktextract"
version = "0.0.1"
authors = ["Tijmen Baarda <t.c.baarda@uu.nl>"]
description = "Dictionary lookup from Wiktionary for inflected Arabic words"
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/tijmenbaarda/arwiktextract"
classifiers = [
  'Development Status :: 2 - Pre-Alpha',
  'Environment :: Console',
  'Intended Audience :: Science/Research',
  'License :: OSI Approved :: BSD License',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3'
]

[tool.poetry.dependencies]
python = "^3.9"
appdirs = "^1.4"
cmd2 = "^2.4"
requests = "^2.31"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3"
black = "^23.11"
ruff = "^0.1.5"

[tool.poetry.scripts]
arwikt = "arwiktextract.__main__:main"

[tool.pytest.ini_options]
pythonpath = [
  "arwiktextract"
]

[tool.setuptools.packages.find]
where = ["."]
